tests/ui/frontmatter/frontmatter.rs
---
//~^ ERROR expected item, found `-`
---

#![feature(frontmatter)]

fn main() {
}
